--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -4,6 +4,6 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "https://player-hub-production.up.railway.app/api/:splat" 
+  to = "player-hub-production.up.railway.app/api/:splat" 
   status = 200
   force = true
